--- a/lxc/nginx-site.conf
+++ b/lxc/nginx-site.conf
@@ -9,6 +9,15 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    location /api {
+        proxy_pass http://localhost:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-XSS-Protection "1; mode=block";
