--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,8 +16,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+
+      - name: Extract Release Notes
+        id: extract_notes
+        run: |
+          node scripts/extract-release-notes.cjs ${{ github.ref_name }}
+          echo "title=$(cat RELEASE_TITLE)" >> $GITHUB_OUTPUT
+
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
-          generate_release_notes: true
+          name: ${{ steps.extract_notes.outputs.title }}
+          body_path: RELEASE_BODY.md
           make_latest: true
