--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,19 +5,31 @@ on:
     tags:
       - 'v*'
 
+permissions:
+  contents: write
+
 jobs:
+  create_release:
+    name: Create GitHub Release
+    runs-on: ubuntu-latest
+    steps:
+      - name: Create Release
+        uses: softprops/action-gh-release@v1
+        with:
+          generate_release_notes: true
+
   deploy:
-    name: Deploy on Local Runner
+    name: Deploy upon Release
+    needs: create_release
     runs-on: self-hosted
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
         with:
-          clean: false  # Don't wipe the directory, just update it
+          clean: false
 
       - name: Run Update Script
         run: |
           chmod +x scripts/update.sh
-          # Allow running as root if configured
           export RUNNER_ALLOW_RUNASROOT=1
           ./scripts/update.sh
