security: exclude sensitive directories from public repo
Added to .gitignore:
- .agent/ - Custom agents and skills (proprietary knowledge)
- .github/workflows/ - Deployment secrets and logic
- .gemini/ - Antigravity artifacts
- .firebase/ - Firebase debug files

These directories contain sensitive information and should not be
exposed in public repositories. The Forge can be installed locally
from the separate The-Forge repository.

Security improvements for public repository hosting.

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,18 @@ Thumbs.db
 
 # Screenshots (keep in repo for documentation)
 !screenshots/
+
+# Firebase
+.firebase/
+firebase-debug.log
+firestore-debug.log
+ui-debug.log
+
+# Agent configurations (KEEP PRIVATE - contains custom agents and skills)
+.agent/
+
+# GitHub workflows (KEEP PRIVATE - contains deployment secrets and logic)
+.github/workflows/
+
+# Gemini/Antigravity artifacts (KEEP PRIVATE)
+.gemini/
